test/sema/typeck/struct/field-wrong-type.out
error: `return` expects value of type `Int32` but got `Bool`.
--> field-wrong-type.dora:2:21
 | struct Foo(Bool)
 | fn f(x: Foo): Int32 { x.0 }
                       ~~~~~~~
 | 
1 error found.
