test/sema/typeck/struct/field-wrong-type.dora
struct Foo(Bool)
fn f(x: Foo): Int32 { x.0 }
